# fi-labs-2023

cp_2/burzhymskyi_fi-03_nedozhdii_fi-03_cp2/: balobol_encoded_12.txt  lab2.py
cp_3/burzhymskyi_fi-03_nedozhdii_fi-03_cp3/: lab_3.py
cp_4/burzhymskyi_fi-03_nedozhdii_fi-03_cp4/: CMakeLists.txt  lab4.py  main.cpp
